force-app/main/default/objects/History__c/History__c.object-meta.xml
<CustomObject>
    <label>History</label>
    <pluralLabel>Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>History Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>