force-app/main/default/objects/History__c/fields/N_1870_11_12__c.field-meta.xml
<CustomField>
    <fullName>N_1870_11_12__c</fullName>
    <label>N 1870 11 12</label>
    <type>Lookup</type>
    <referenceTo>N_1870_11_12__c</referenceTo>
    <relationshipName>History_N_1870_11_12</relationshipName>
</CustomField>