force-app/main/default/objects/History__c/fields/N_1870_4_29__c.field-meta.xml
<CustomField>
    <fullName>N_1870_4_29__c</fullName>
    <label>N 1870 4 29</label>
    <type>Lookup</type>
    <referenceTo>War_History_Entry__c</referenceTo>
    <relationshipName>History_N_1870_4_29</relationshipName>
</CustomField>