force-app/main/default/objects/History__c/fields/N_1870_6_28__c.field-meta.xml
<CustomField>
    <fullName>N_1870_6_28__c</fullName>
    <label>N 1870 6 28</label>
    <type>Lookup</type>
    <referenceTo>War_History_Entry__c</referenceTo>
    <relationshipName>History_N_1870_6_28</relationshipName>
</CustomField>